Restructure DeltaFiles to hold a list of DeltaFileFlows